# mqtt-bridge

./: .gitignore  README.md  policy.md  pyproject.toml
.github/.github/: copilot-instructions.md
journal/: 2025-07-20.md  2025-07-23.md  2025-07-24.md  2025-08-17.md  message_persistence_recommendations.md
src/mqtt_bridge/: __init__.py  direct.py  server.py  subscription_persistence.py
tests/: test_core.py
