[project]
name = "mqtt-bridge"
version = "0.2.0"
description = "MCP server for MQTT communication with tools for connecting to MQTT brokers, publishing messages, subscribing to topics, and managing MQTT connections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "aiomqtt>=2.4.0",
 "mcp>=1.12.0",
 "paho-mqtt>=2.1.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "pytest-asyncio>=0.23.3",
]

[project.scripts]
mqtt-bridge = "mqtt_bridge:main"
